# elodie

./: .env  .gitignore  Dockerfile.new  docker-compose.yml  elodie.py  setup.cfg  setup.py
elodie/media/: audio.py  photo.py  video.py
