[metadata]
name = elodie
; version = 1.
description = メディアファイル整理プログラム
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
; url = https://github.com/chekke1999/m3u8maker
[options]
scripts =
    elodie.py
install_requires =
    click==6.6
    requests==2.20.0
    Send2Trash==1.3.0
    future==0.16.0
    configparser==3.5.0
    tabulate==0.7.7
    Pillow==6.2.2; python_version == '2.7'
    Pillow==8.0; python_version >= '3.6'
    six==1.9

[options.entry_points]
console_scripts =
    elodie = elodie:entrypoint